--- a/template/app/navbar.twig
+++ b/template/app/navbar.twig
@@ -30,7 +30,7 @@
                                 aria-expanded="false"
                                 id="main-menu-dropdown-button"
                         >
-                            <img src="{{ userImage }}" class="avatar">
+                            <img src="{{ userImage }}" class="avatar" id="main-menu-profile-avatar">
                         </button>
                         <div id="main-menu-dropdown-area" class="dropdown-menu dropdown-menu-right"
                              aria-labelledby="navbarDropdown">
@@ -41,7 +41,7 @@
                                             <i class="{{ data.faClass }} fa-1x align-self-center justify-content-center text-center ml-1 icon"></i>
                                         </div>
                                         <div class="align-self-start pl-2">
-                                            <div class="name">&nbsp;{{ data.name }} </div>
+                                            <div class="name">&nbsp;{{ data["name.settings"] }} </div>
                                         </div>
                                     </a>
                                 </li>
