--- a/template/app/body.twig
+++ b/template/app/body.twig
@@ -1,7 +1,7 @@
 <body>
 <div class="{{ staticContext ? 'container-fluid p-0' : 'container-fluid' }} ">
     {% if staticContext == false %}
-        <div class="row">
+        <div class="row navigation-wrapper">
             {{ navigation|raw }}
         </div>
     {% endif %}
