add welcome mail add email handling add tests

--- a/template/email/batch_mail.twig
+++ b/template/email/batch_mail.twig
@@ -243,8 +243,8 @@
                                     style="font-family:Roboto,Helvetica,Arial,sans-serif;font-size:14px;font-weight:400;line-height:23px;padding-bottom:54px;color:#536273;border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;"
                                     valign="top"><p
                                             style="padding:0;margin:0;text-align:left;font-size:14px;font-weight:400;border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;">
-                                        {{ questions1 }}, <a href="https://keestash.com/contact-us"
-                                                             style="color:#2dac91;text-decoration:none;border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;">{{ questions2 }}</a>.
+                                        {{ questions1 }} <a href="https://keestash.com/contact-us"
+                                                            style="color:#2dac91;text-decoration:none;border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;">{{ questions2 }}</a>
                                     </p></td>
                             </tr>
                             <tr style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;">
@@ -277,7 +277,7 @@
                                                         style="padding:0;margin-top:0;margin-bottom:20px;border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;">
                                                     {{ questions1 }} <a
                                                             href="https://keestash.com/contact-us"
-                                                            style="color:#2dac91;text-decoration:none;border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;">{{ questions2 }}</a>.
+                                                            style="color:#2dac91;text-decoration:none;border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;">{{ questions2 }}</a>
                                                 </p>
                                                 <p style="padding:0;margin-top:0;margin-bottom:5px;color:#8B9AAB;border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;">
                                                     <a href="https://facebook.com/keestash"
