do a lot of stuff

--- a/apps/PasswordManager/template/email/welcome_mail.twig
+++ b/apps/PasswordManager/template/email/welcome_mail.twig
@@ -100,11 +100,11 @@
         */
 
         .appleBody a {
-            color: #21AD91;
+            color: #081A51;
         }
 
         .appleLinks a {
-            color: #21AD91;
+            color: #081A51;
             text-decoration: none;
         }
 
@@ -245,11 +245,11 @@
                                     <table align="center" border="0" cellpadding="0" cellspacing="0"
                                            style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;">
                                         <tr style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;">
-                                            <td align="center" bgcolor="#2dac91"
+                                            <td align="center" bgcolor="#081A51"
                                                 style="border-radius:2px;-moz-border-radius:2px;-webkit-border-radius:2px;border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;"
                                                 valign="middle"><a
                                                         href="https://app.keestash.com"
-                                                        style="font-family:Roboto,Helvetica,Arial,sans-serif;font-size:17px;font-weight:700;text-decoration:none;color:#ffffff;padding:17px 25px 17px 25px;border-radius:2px;-moz-border-radius:2px;-webkit-border-radius:2px;border:1px solid #2dac91;display:inline-block;border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;">{{ buttonText }}</a></td>
+                                                        style="font-family:Roboto,Helvetica,Arial,sans-serif;font-size:17px;font-weight:700;text-decoration:none;color:#ffffff;padding:17px 25px 17px 25px;border-radius:2px;-moz-border-radius:2px;-webkit-border-radius:2px;border:1px solid #081A51;display:inline-block;border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;">{{ buttonText }}</a></td>
                                         </tr>
                                     </table>
                                 </td>
@@ -260,7 +260,7 @@
                                     valign="top"><p
                                         style="padding:0;margin:0;text-align:left;font-size:14px;font-weight:400;border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;">
                                     {{ questions1 }} <a href="https://keestash.com/contact-us"
-                                                         style="color:#2dac91;text-decoration:none;border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;">{{ questions2 }}</a>
+                                                         style="color:#081A51;text-decoration:none;border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;">{{ questions2 }}</a>
                                 </p></td>
                             </tr>
                             <tr style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;">
@@ -293,7 +293,7 @@
                                                     style="padding:0;margin-top:0;margin-bottom:20px;border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;">
                                                 {{ questions1 }} <a
                                                     href="https://keestash.com/contact-us"
-                                                    style="color:#2dac91;text-decoration:none;border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;">{{ questions2 }}</a>
+                                                    style="color:#081A51;text-decoration:none;border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;">{{ questions2 }}</a>
                                             </p>
                                                 <p style="padding:0;margin-top:0;margin-bottom:5px;color:#8B9AAB;border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;">
                                                     <a href="https://facebook.com/keestash"
@@ -335,7 +335,7 @@
                                                 <p style="padding:0;margin:0;font-weight:100;color:#8c98a5;border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;">
                                                     &copy; 2022 - {{ currentYear }} Keestash
                                                     <a href="https://keestash.com"
-                                                       style="color:#2dac91;text-decoration:none;border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;">www.keestash.com</a>
+                                                       style="color:#081A51;text-decoration:none;border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;">www.keestash.com</a>
                                                 </p></td>
                                         </tr>
                                     </table>
