--- a/apps/Register/template/email/confirmation_mail.twig
+++ b/apps/Register/template/email/confirmation_mail.twig
@@ -239,6 +239,23 @@
                                         {{ content }}</p></td>
                             </tr>
                             <tr style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;">
+                                <td align="center"
+                                    style="padding-top:33px;padding-bottom:33px;border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;"
+                                    valign="top">
+                                    <table align="center" border="0" cellpadding="0" cellspacing="0"
+                                           style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;">
+                                        <tr style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;">
+                                            <td align="center" bgcolor="#081A51"
+                                                style="border-radius:2px;-moz-border-radius:2px;-webkit-border-radius:2px;border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;"
+                                                valign="middle"><a
+                                                        href="{{ href }}"
+                                                        style="font-family:Roboto,Helvetica,Arial,sans-serif;font-size:17px;font-weight:700;text-decoration:none;color:#ffffff;padding:17px 25px 17px 25px;border-radius:2px;-moz-border-radius:2px;-webkit-border-radius:2px;border:1px solid #081A51;display:inline-block;border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;">{{ buttonText }}</a>
+                                            </td>
+                                        </tr>
+                                    </table>
+                                </td>
+                            </tr>
+                            <tr style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;">
                                 <td align="left"
                                     style="font-family:Roboto,Helvetica,Arial,sans-serif;font-size:14px;font-weight:400;line-height:23px;padding-bottom:54px;color:#536273;border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;"
                                     valign="top"><p
