--- a/apps/Register/template/email/lock.html
+++ b/apps/Register/template/email/lock.html
@@ -69,7 +69,7 @@
         <td class="email-content">
             <h1>{{ title }}</h1>
             <p>{{ message }}</p>
-            <a href="mailto:dogan@keestashapps.com?subject=Please%20Unlock%20My%20Keestash%20Account"
+            <a href="mailto:<mail>@<to>.<to>?subject=Please%20Unlock%20My%20Keestash%20Account"
                class="response-button">{{ buttonText }}</a>
         </td>
     </tr>
