--- a/apps/Register/template/email/lock.twig
+++ b/apps/Register/template/email/lock.twig
@@ -68,9 +68,10 @@
     <tr>
         <td class="email-content">
             <h1>{{ title }}</h1>
-            <p>{{ message }}</p>
-            <a href="mailto:<mail>@<to>.<to>?subject=Please%20Unlock%20My%20Keestash%20Account"
-               class="response-button">{{ buttonText }}</a>
+            <p>Dear {{ customerName }},</p>
+            <p>{{ messagePartOne }}</p>
+            <p>{{ messagePartTwo }}</p>
+            <p>{{ messagePartThree }}</p>
         </td>
     </tr>
     <tr>
